--- a/SocialDistribution/frontend/layout.html
+++ b/SocialDistribution/frontend/layout.html
@@ -121,7 +121,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item" id="profile">
-                                        <a href="{% url 'profile' user.username %}" class="nav-link">
+                                        <a href="{% url 'profile' user.userid %}" class="nav-link">
                                             <div>
                                                 <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-person" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                                     <path fill-rule="evenodd" d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 0 0 .014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 0 0 .022.004zm9.974.056v-.002.002zM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -176,7 +176,7 @@
                     <div style="position: absolute; bottom: 10px;">
                         {% if user.is_authenticated %}    
                             <li class="nav-item sidenav-user">
-                                <a href="{% url 'profile' user.username %}" class="nav-link">
+                                <a href="{% url 'profile' user.userid %}" class="nav-link">
                                     <div class="user_account">
                                         <div class="small-profilepic" style="float: left; background-image: url(/media/{{user.profile_pic}})"></div>
                                         <div style="height: 2.7vw; margin: auto;">
@@ -188,7 +188,7 @@
                             </li>
                         {% endif %}
                         {% if user.is_authenticated %}
-                            <input type="hidden" id="user_is_authenticated" value="True" data-username='{{user.username}}'>
+                            <input type="hidden" id="user_is_authenticated" value="True" data-userid='{{user.userid}}'>
                         {% else %}
                             <input type="hidden" id="user_is_authenticated" value="False">
                         {% endif %}
@@ -223,12 +223,12 @@
                             {% for suggestion in suggestions %}
                                 <div class="suggestion-user">
                                     <div>
-                                        <a href="{% url 'profile' suggestion.username %}">
+                                        <a href="{% url 'profile' suggestion.userid %}">
                                             <div class="small-profilepic" style="background-image: url(/media/{{suggestion.profile_pic}})"></div>
                                         </a>
                                     </div>
                                     <div class="user-details">
-                                        <a href="{% url 'profile' suggestion.username %}">
+                                        <a href="{% url 'profile' suggestion.userid %}">
                                             <div id="user-name">
                                                 
                                                 <strong>
@@ -239,7 +239,7 @@
                                         </a>
                                     </div>
                                     <div>
-                                        <button class="btn btn-outline-success" type="button" onclick="follow_user(this,'{{suggestion.username}}','suggestion')">Follow</button>
+                                        <button class="btn btn-outline-success" type="button" onclick="follow_user(this,'{{suggestion.userid}}','suggestion')">Follow</button>
                                     </div>
                                 </div>
                             {% empty %}
