--- a/SocialDistribution/frontend/index.html
+++ b/SocialDistribution/frontend/index.html
@@ -10,12 +10,12 @@
                     <div class="row">
                         <div class="col">
                             <h2>Post title: {{ post.title }}</h2>
-                            <p class="field-label"><strong>By: </strong><a class="author-link" href="authors/{{ post.author.userId }}">{{ post.author.displayName }}</a></p>
+                            <p class="field-label"><strong>By: </strong><a class="author-link" href="http://127.0.0.1:8000/service/authors/{{ post.author.userId }}">{{ post.author.displayName }}</a></p>
                         </div>
                         <div class="col-3 col-btn">
                             {% if userAuthor and userAuthor.id == post.author.id %}
-                                <a href="service/post/editpost/{{post.id}}/{{ post.author.userId }}"><button type="button" class="btn">Edit post</button></a>
-                                <a href="service/post/deletepost/{{post.id}}/{{ post.author.userId }}"><button type="button" class="btn" onclick="return confirm('Are you sure?');">Delete post</button></a>
+                                <a href="http://127.0.0.1:8000/service/post/editpost/{{post.id}}/{{ post.author.userId }}"><button type="button" class="btn">Edit post</button></a>
+                                <a href="http://127.0.0.1:8000/service/post/deletepost/{{post.id}}/{{ post.author.userId }}"><button type="button" class="btn" onclick="return confirm('Are you sure?');">Delete post</button></a>
                             {% endif %}
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                 <div id="comments-of-{{post.id}}">
                     {% for comment in post.topComments %}
                         <div class="comment">
-                            <p><a class="author-link" href="authors/{{ comment.author.id }}">{{ comment.author.displayName }}</a>: {{comment.comment}}</p>
+                            <p><a class="author-link" href="http://127.0.0.1:8000/service/authors/{{ comment.author.id }}">{{ comment.author.displayName }}</a>: {{comment.comment}}</p>
                         </div>
                     {% endfor %}
                 </div>
