--- a/SocialDistribution/frontend/create.html
+++ b/SocialDistribution/frontend/create.html
@@ -61,153 +61,71 @@
     var authorUrl;
     var post;
     var content;
+    var formdata;
     function createPost(){
-        post = new Object();
+        formdata = new FormData();
         var postTitle = document.getElementById("title").value;
         var postDesc = document.getElementById("description").value;
         var listedStatus = document.querySelector('input[name = "listedstatus"]:checked').value;
         var visibility = document.querySelector('input[name = "visibility"]:checked').value;
         if(listedStatus==="listed"){
-            post.unlisted=false;
+            formdata.append("unlisted", false);
         }
         else{
-            post.unlisted=true;
+            formdata.append("unlisted", true);
         }
         if(content_isText===true){
             encode_Content = document.getElementById("textcontent").value;
-            post.content = encode_Content;
+            formdata.append("content", encode_Content);
         }
         else{
-            post.content = encode_Content;
+            encode_Content = document.getElementById("filecontent").files;
+            formdata.append("image", encode_Content[0]);
         }
-        
-        post.visibility=visibility;
-        post.author = '{{ author }}';
-        post.title=postTitle;
-        post.description=postDesc;
+        formdata.append("visibility", visibility);
+        formdata.append("author", '{{ author }}');
+        formdata.append("title", postTitle);
+        formdata.append("description", postDesc);
         var date = new Date()
-        post.published = date.toISOString();
-        post.count=0;
-        post.comments='http://127.0.0.1:8000/service' +'/authors/' +'{{author.id}}'+'/posts/';
-
-        post.type = "post";
-        post.id="";
-        post.content=encode_Content;
+        formdata.append("published", date.toISOString());
+        formdata.append("count", 0);
+        formdata.append("comments", 'http://127.0.0.1:8000/service' +'/authors/' +'{{author.id}}'+'/posts/');
+        formdata.append("type", "post");
+        // post.id="";
         categories = document.getElementById("postcat").value;
         if(categories===""){
-            post.categories=[];
+            formdata.append("categories", []);
         }
         else{
-            post.categories=categories.split(',');
+            formdata.append("categories", categories.split(','));
         }
     }
     function sendMessage(){
-        fetch(authorUrl,{
-        method: 'GET',
-        headers: {
-                'Content-Type' : 'application/json',
-                'X-CSRFToken' : "{{ csrf_token }}"
-            },})
-        .then(function(response){
-            return response.json();
-        })
-        .then(function(authorObj){
-            post.author = authorObj;
-        })
-        .then(function(){
-            postString=JSON.stringify(post);
-            var postUrl = 'http://127.0.0.1:8000/service'+'/authors/'+'{{author.id}}' + "/posts/";
-            return fetch(postUrl,{
-                method: 'POST',
-                headers: {
-                    'Content-Type' : 'application/json',
-                    'X-CSRFToken' : "{{ csrf_token }}"
-                },
-                body: postString
-            })
-        })
-        .then(function(response){
-            return response.json();
-        })
-        .then(function(data){
-            post.id = data.data.id;
-            post.comments=post.id+'/comments'
-            
-            postString = JSON.stringify(post);
-            return fetch(post.id+'/',{
-                method: 'POST',
-                headers: {
-                'Content-Type' : 'application/json',
-                'X-CSRFToken' : "{{ csrf_token }}"
-                },
-                body: postString 
-            })
-        })
-        .then(function(){ // update newly created post with new comments link
-            var urlofFollowers = 'http://127.0.0.1:8000/service' + '/authors/'+ '{{ author.id }}' + '/followers';
-            return fetch(urlofFollowers,{
-            method: 'GET',
+        var postUrl = 'http://127.0.0.1:8000/service'+'/authors/'+'{{author.id}}' + '/posts/';
+        fetch(postUrl,{
+            method: 'POST',
             headers: {
-                'Content-Type' : 'application/json',
                 'X-CSRFToken' : "{{ csrf_token }}"
-            } 
-            })
-        })
+            },
+            body: formdata
+        }) 
         .then(function(response){
             return response.json();
         })
         .then(function(data){
-            if(post.unlisted===false){
-                followersInJson = data["items"]["data"];
-                if(post.visibility === "FRIENDS"){
-                    for(let follower of followersInJson){
-                        var urlofFriend = 'http://127.0.0.1:8000/service/'+"/authors/" + follower.id +'/followers/'+'{{ author.id }}';
-                        fetch(urlofFriend,{
-                            method: 'GET',
-                            headers: {
-                            'Content-Type' : 'application/json',
-                            'X-CSRFToken' : "{{ csrf_token }}"
-                            }, 
-                        })
-                        .then(function(response){
-                            return response.json();
-                        })
-                        .then(function(data){
-                            if(data.id==='{{ author.id }}'){
-                                var urlofInbox = 'http://127.0.0.1:8000/service'+"/authors/" + follower.id +'/inbox';
-                                fetch(urlofInbox,{
-                                    method: 'POST',
-                                    headers: {
-                                    'Content-Type' : 'application/json',
-                                    'X-CSRFToken' : "{{ csrf_token }}"
-                                    },
-                                    body: postString 
-                                })
-                            }
-
-                        })
-                        .catch (function (error) {
-                            console.log('Request is failed', error);
-                        });
-                    } 
-                }
-                else{
-                    for(let follower of followersInJson){
-                        var urlofInbox = 'http://127.0.0.1:8000/service'+"/authors/" + follower.id +'/inbox';
-                        fetch(urlofInbox,{
-                            method: 'POST',
-                            headers: {
-                            'Content-Type' : 'application/json',
-                            'X-CSRFToken' : "{{ csrf_token }}"
-                            },
-                            body: postString 
-                        })
-                    } 
-                }
-            }
+            formdata.append("id", data.id);
+            formdata.append("comments", data.id + '/comments');
+            let uri = 'http://127.0.0.1:8000/service'+'/authors/'+'{{author.id}}' + '/posts/' + data.id+'/';
+            return fetch(uri,{
+                method: 'POST',
+                headers: {
+                'X-CSRFToken' : "{{ csrf_token }}"
+                },
+                body: formdata
+            })
         })
         .then(function(){
-            alert("A new post is successfully created and delivered to your followers! Redirecting you to post-list page...");
+            alert("A new post is successfully created! Redirecting you to post-list page...");
             location.href = 'http://127.0.0.1:8000/service'+'/site/posts';
         })
         .catch (function (error) {
@@ -243,7 +161,7 @@
             allfilled=false;
             alert("Please fill in content choice");
         }
-        if(document.getElementById("listed").checked===false && document.getElementById("unlisted").checked===false){
+        if(document.getElementById("listed").checked===false && document.getElementById("notlisted").checked===false){
             allfilled=false;
             alert("Please fill in if post is listed");
         }
@@ -257,11 +175,9 @@
         }
         if (allFilled){
             createPost();
-            postString = JSON.stringify(post);
             authorUrl ='http://127.0.0.1:8000/service'+'/authors/'+'{{author.id}}';
             if(content_isText===true){
-                post.contentType = 'text/plain';
-                postString = JSON.stringify(post);
+                formdata.append("contentType", 'text/plain');
                 sendMessage();
             }
             else{
@@ -275,12 +191,10 @@
                     });
                 }
                 var file= content.files[0];
-                post.contentType = file.type+';base64';
+                formdata.append("contentType", file.type+';base64');
                 var promise = getBase64(file);
                 promise.then(function(result) {
                     encode_Content=result;
-                    post.content=encode_Content;
-                    postString = JSON.stringify(post);
                     sendMessage();
                 });
             }
