--- a/SocialDistribution/frontend/edit.html
+++ b/SocialDistribution/frontend/edit.html
@@ -180,7 +180,7 @@
             })
             .then(function(){
                 alert("Successfully modified your post! Redirecting you to posts page.");
-                location.href = '{{host}}'+'/service'+'/site/posts';
+                location.href = '{{host}}'+'/site/posts';
             })
             .catch (function (error) {
                 console.log('Request failed', error);
