--- a/SocialDistribution/frontend/edit.html
+++ b/SocialDistribution/frontend/edit.html
@@ -39,6 +39,8 @@
     <form>
         <input type="radio" id="textchoice" name="textorfile" value="text">
         <label for="text">Text</label><br>
+        <input type="radio" id="textchoice" name="textorfile" value="text/markdown">
+        <label for="text">Markdown</label><br>
         <input type="radio" id="filechoice" name="textorfile" value="file">
         <label for="file">File</label><br>
     </form>
@@ -59,6 +61,8 @@
         var post;
         var encode_Content;
         var content_isText;
+        var content_isMarkdown;
+        var content_isFile;
         var postString;
         var AuthorUrl;
         var postUrl;
@@ -99,6 +103,15 @@
                     document.getElementById("filecontent").hidden=true;
                     document.getElementById("textcontent").value=post.content;
                 }
+                else if(post.contentType==="text/markdown"){
+                    content_isText=true;
+                    document.getElementById("textchoice").checked=true;
+                    document.getElementById("inputcontenttext").removeAttribute("hidden");
+                    document.getElementById("textcontent").removeAttribute("hidden");
+                    document.getElementById("choosefiletext").hidden = true;
+                    document.getElementById("filecontent").hidden=true;
+                    document.getElementById("textcontent").value=post.content;
+                }
                 else{
                     content_isText=false;
                     document.getElementById("filechoice").checked=true;
@@ -125,8 +138,16 @@
                 document.getElementById("filecontent").hidden=true;
             }
 
+            else if(document.querySelector('input[name = "textorfile"]:checked').value ==="text/markdown"){
+                content_isMarkdown=true;
+                document.getElementById("inputcontenttext").removeAttribute("hidden");
+                document.getElementById("textcontent").removeAttribute("hidden");
+                document.getElementById("choosefiletext").hidden = true;
+                document.getElementById("filecontent").hidden=true;
+            }
+
             else{
-                content_isText=false;
+                content_isFile=true;
                 document.getElementById("choosefiletext").removeAttribute("hidden");
                 document.getElementById("filecontent").removeAttribute("hidden");
                 document.getElementById("inputcontenttext").hidden=true;
@@ -151,7 +172,11 @@
                 encode_Content = document.getElementById("textcontent").value;
                 formdata.append("content", encode_Content);
             }
-            else{
+            else if(content_isMarkdown===true){
+                encode_Content = document.getElementById("textcontent").value;
+                formdata.append("content", encode_Content);
+            }
+            else if(content_isFile===true){
                 encode_Content = document.getElementById("filecontent").files;
                 formdata.append("image", encode_Content[0]);
             }
@@ -194,6 +219,10 @@
             AuthorUrl = '{{host}}'+'/service'+'/authors/'+'{{post.author.id}}';
             if(content_isText===true){
                 formdata.append("contentType", 'text/plain');
+                sendMessage();
+            }
+            else if(content_isMarkdown===true){
+                formdata.append("contentType", 'text/markdown');
                 sendMessage();
             }
             else{
